Login:ruteo y uso del changeuser de firebase: estado en costruccion

--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -62,5 +62,14 @@ a.nuevo-abmc.btn.btn-success {
 }
 
 #login_form {
-    margin-top: 20px;
+    margin-top: 50px;
+    /**width: 90%;*/
+}
+
+#btnFacebookSingIn {
+    margin: 8px;
+}
+
+#btnGoogleSingIn {
+    margin: 8px;
 }
