--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -62,7 +62,8 @@
         </div>
 
     </div>
-    {% include 'footer/footer.html' %}
+    {% include 'footer/footer.html' %} 
+    {% include 'sesion/sesion.html' %}
 </body>
 
 </html>
