--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -109,5 +109,8 @@
       </span>||
     <span class="navbar-text">
         <a href="/login">Login</a>
+      </span> ||
+    <span class="navbar-text">
+        <button class="btn btn-danger" id="btnSingOut">Login--salir</button>
       </span>
 </nav>
