incorporacion de sesion a los menu con tabla  de la administracion

--- a/App/templates/combo/comboABMC.html
+++ b/App/templates/combo/comboABMC.html
@@ -61,7 +61,7 @@
 
 
     {% include 'footer/footer.html' %}
-</body>
+
 <script>
     $('document').ready(function() {
         var columns = [{
@@ -138,5 +138,6 @@
 
     });
 </script>
-
+{% include 'sesion/sesion.html' %}
+</body>
 </html>
