--- a/App/templates/marca/marcaABMC.html
+++ b/App/templates/marca/marcaABMC.html
@@ -86,7 +86,7 @@
 
     {% include 'footer/footer.html' %}
 
-</body>
+
 <script>
     $('document').ready(function() {
         var columns = [{
@@ -152,5 +152,6 @@
 
     });
 </script>
-
+{% include 'sesion/sesion.html' %}
+</body>
 </html>
