--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -111,6 +111,6 @@
         <a href="/login">Login</a>
       </span> ||
     <span class="navbar-text">
-        <button class="btn btn-danger" id="btnSingOut">Login--salir</button>
+        <button class="btn btn-danger" id="btnSingOut">Salir</button>
       </span>
 </nav>
