--- a/App/templates/producto/productoABMC.html
+++ b/App/templates/producto/productoABMC.html
@@ -87,7 +87,7 @@
 
 
 
-</body>
+
 <script>
     $('document').ready(function() {
         var columns = [{
@@ -183,5 +183,6 @@
 
     });
 </script>
-
+{% include 'sesion/sesion.html' %}
+</body>
 </html>
