--- a/App/templates/rol/rolABMC.html
+++ b/App/templates/rol/rolABMC.html
@@ -71,9 +71,9 @@
 
 
 
-    {% include 'footer/footer.html' %}
+    {% include 'footer/footer.html' %} 
+  
 
-</body>
 <script>
     $('document').ready(function() {
         var columns = [{
@@ -136,5 +136,6 @@
 
     });
 </script>
-
+  {% include 'sesion/sesion.html' %}
+</body>
 </html>
