--- a/App/templates/usuario/usuarioABMC.html
+++ b/App/templates/usuario/usuarioABMC.html
@@ -59,8 +59,8 @@
     </div>
 
 
+    {% include 'sesion/sesion.html' %}
 
-</body>
 <script>
     $('document').ready(function() {
         var columns = [{
@@ -131,5 +131,5 @@
 
     });
 </script>
-
+</body>
 </html>
