Se muve el compoenete sesion.html a la navbar ya que ambos estan en todas las pantallas de la admin

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -63,7 +63,7 @@
 
     </div>
     {% include 'footer/footer.html' %} 
-    {% include 'sesion/sesion.html' %}
+    <!-- {% include 'sesion/sesion.html' %} -->
 </body>
 
 </html>
