--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -114,3 +114,4 @@
         <button class="btn btn-danger" id="btnSingOut">Salir</button>
       </span>
 </nav>
+{% include 'sesion/sesion.html' %}
