--- a/App/templates/usuario/usuarioABMC.html
+++ b/App/templates/usuario/usuarioABMC.html
@@ -59,7 +59,7 @@
     </div>
 
 
-    {% include 'sesion/sesion.html' %}
+    <!-- {% include 'sesion/sesion.html' %} -->
 
 <script>
     $('document').ready(function() {
