--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -71,7 +71,7 @@
 
 <body>
     <div class="d-flex" id="wrapper">
-        {% include 'navbars/sidebar.html' %}
+        {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
             {% include 'navbars/navbar.html' %}
             <div style="padding-top: 10px;padding-right: 10px;">
