--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -1,7 +1,7 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
-    <a class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a>
+    <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a>
     <div class="list-group list-group-flush">
-        <a href="{{ url_for('listarProductos') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio</a>
+        <a href="{{ url_for('index') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio</a>
         <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías </a>
         <a href="{{ url_for('listadoMarcas') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas </a>
         <a href="{{ url_for('listarCombo') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos </a>
