Correccion estética en las faq

--- a/App/templates/cliente/faq.html
+++ b/App/templates/cliente/faq.html
@@ -7,13 +7,15 @@
     </head>
     <style>
         details{
-        font-size: 18px;
-        border: 1px solid #DED3D0;
+        font-size: 20px;
         font-family: Arial;
-        margin-bottom:20px;
+        margin-bottom:30px;
         margin-top: 20px;
-        margin-left:5px;
+        margin-left:30px;
         width:100%;
+        }
+        summary{
+            border: none;
         }
         p{
         font-size: 14px;
