--- a/App/templates/usuario/contrasenias_no_coinciden.html
+++ b/App/templates/usuario/contrasenias_no_coinciden.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include 'header/header.html' %}
+<head>
+    <style>
+        .container{
+            width: 600px;
+            padding-top: 50px;
+        }
+        h3{
+            text-align: center;
+            color: red;
+        }
+        h4{
+            text-align: center;
+            color:red;
+        }
+    </style>
+</head>
 
 <body>
     <div class="d-flex" id="wrapper">
-        {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
-            <div class="container p-2">
-                <h2>Alta de usuario</h2>
+            <div class="container">
+                <h3>Las contraseñas ingresadas no coiciden</h3>
+                <h4>Vuelve a intentarlo</h4>
                 <form action="guardarUsuario" method="POST">
                     <div class="form-group">
                         <label for="nombreUsuario">Email</label>
-                        <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario">
+                        <input type="email" value="{{nombre}}" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="{{nombre}}">
                     </div>
                     <div class="form-group">
                         <label for="contrasenia">Contraseña</label>
@@ -25,7 +40,7 @@
                     </div>
                     <div class="form-group">
                         <label for="contacto">Contacto</label>
-                        <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">                            
+                        <textarea type="text" value="{{contacto}}" class="form-control" name="contacto" id="contacto" placeholder="{{contacto}}">                            
                         </textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
