--- a/App/templates/marca/listadoMarca.html
+++ b/App/templates/marca/listadoMarca.html
@@ -9,10 +9,9 @@
       {% include 'navbars/sidebar_usuarios.html' %}
 
       <div id="page-content-wrapper">
-          {% include 'navbars/navbar.html' %}
 
           <div class="container-fluid">
-              <center><h2>Marcas de los productos</h2></center>
+              <center><h2 style="margin-top: 60px;">Marcas de los productos</h2></center>
               <form action="productosPorMarca" method="POST">
                 <div class="form-group">
                   <label for="marca"> Seleccione una marca</label>
