--- a/App/templates/combo/listadoCombo.html
+++ b/App/templates/combo/listadoCombo.html
@@ -56,7 +56,7 @@
         }
         .titulo{
           font-size: 30px;
-          margin-top: 10px;
+          margin-top: 70px;
           margin-left: 20px;
         }
     </style>
@@ -69,7 +69,7 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
+            {% include 'navbars/navbar_usuario_logueado.html' %}
             <div class="titulo">
               <span>Combos disponibles</span>
             </div>
