--- a/App/templates/tipoProducto/listadoTipoProducto.html
+++ b/App/templates/tipoProducto/listadoTipoProducto.html
@@ -4,15 +4,15 @@
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+
 <body>
   <div class="d-flex" id="wrapper">
       {% include 'navbars/sidebar_usuarios.html' %}
 
       <div id="page-content-wrapper">
-          {% include 'navbars/navbar.html' %}
 
           <div class="container-fluid">
-              <center><h2>Categorías de productos</h2></center>
+              <center><h2 style="margin-top: 60px;">Categorías de productos</h2></center>
               <form action="listarCategorias" method="POST">
                 <div class="form-group">
                   <label for="tipoProducto"> Seleccione una categoría</label>
