--- a/App/templates/usuario/salir.html
+++ b/App/templates/usuario/salir.html
@@ -21,7 +21,7 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
+            {% include 'navbars/navbar_nologueado.html' %}
             <div class="mensaje">
                 Has cerrado sesión.
             </div>
