--- a/App/templates/admin/index_admin.html
+++ b/App/templates/admin/index_admin.html
@@ -1,1 +1,23 @@
-<span>Bienvenido "{{session['email']}}"</span>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <title>Inicio</title>
+    <style>
+
+    </style>
+</head>
+
+
+{% include 'header/header.html' %}
+
+<body>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+        </div>
+    </div>
+    {% include 'footer/footer.html' %} 
+</body>
+
+</html>
